--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -27,6 +27,7 @@ stripe>=11.0.0
 
 # Email
 sendgrid>=6.11.0
+pydantic[email]>=2.5.0
 
 # Tasks & Queue
 celery[redis]>=5.4.0
@@ -51,3 +52,4 @@ pytest-asyncio>=0.23.0
 httpx>=0.27.0
 
 prometheus-client>=0.20.0
+
