--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -28,7 +28,9 @@ RUN pip install --no-cache-dir --upgrade pip && \
 FROM python:3.12-slim
 
 # Create non-root user
-RUN useradd -m -u 1000 appuser
+RUN useradd -m -u 1000 appuser && \
+    mkdir -p /app && \
+    chown -R appuser:appuser /app
 
 WORKDIR /app
 
@@ -45,13 +47,16 @@ RUN chown -R appuser:appuser /app
 # Switch to non-root user
 USER appuser
 
-# Expose port
+# Expose port (Render uses $PORT, but expose default for docs)
 EXPOSE 8000
 
-# Healthcheck (K8s/liveness)
+# Healthcheck (K8s/liveness) - use $PORT
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD curl -f http://localhost:8000/health || exit 1
+  CMD curl -f http://localhost:${PORT:-8000}/health || exit 1
 
-# Run with uvicorn (workers = CPU cores or env var)
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", \
-     "--workers", "4", "--log-level", "info", "--proxy-headers"]
+# Run with uvicorn
+# - Bind to 0.0.0.0
+# - Use $PORT (Render sets this)
+# - Workers: 2-4 (safe default; adjust via env if needed)
+# - Proxy headers for Render's load balancer
+CMD ["sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000} --workers 4 --log-level info --proxy-headers --no-access-log"]
