--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -25,9 +25,8 @@ tenacity>=8.5.0
 # Stripe & Billing
 stripe>=11.0.0
 
-# Email
-sendgrid>=6.11.0
-pydantic[email]>=2.5.0
+# Email (migrated from SendGrid)
+resend>=2.0.0
 
 # Tasks & Queue
 celery[redis]>=5.4.0
@@ -36,11 +35,12 @@ redis>=5.0.0
 # Rate limiting & security
 slowapi>=0.1.9
 
-# Observability
-sentry-sdk[fastapi]>=2.0.0
+# Observability & Metrics (custom + optional Prometheus)
+prometheus-client>=0.20.0       # optional – for /metrics endpoint
 
 # Utils
 pydantic-settings>=2.5.0
+pydantic[email]>=2.5.0          # required for EmailStr validation
 httpx>=0.27.0
 qrcode[pil]>=8.0.0
 python-multipart>=0.0.9
@@ -48,8 +48,3 @@ python-multipart>=0.0.9
 # Testing & dev
 pytest>=8.0.0
 pytest-asyncio>=0.23.0
-
-httpx>=0.27.0
-
-prometheus-client>=0.20.0
-
