--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -53,3 +53,6 @@ pytest-asyncio>=0.23.0
 asyncpg>=0.30.0
 psycopg2-binary>=2.9.9          # Required for SQLAlchemy PostgreSQL dialect compat (binary version)
 
+langgraph==0.2.14
+redis==5.0.8
+
