--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -1,54 +1,74 @@
 # apps/api/requirements.txt
 
+# ────────────────────────────────────────────────
 # Core FastAPI & Server
-fastapi>=0.115.2
-uvicorn[standard]>=0.30.6
-starlette>=0.40.0
-python-multipart>=0.0.9
-orjson>=3.10.7
+# ────────────────────────────────────────────────
+fastapi==0.115.2
+uvicorn[standard]==0.30.6
+starlette==0.40.0
+python-multipart==0.0.9
+orjson==3.10.7
 
+# ────────────────────────────────────────────────
 # Database & ORM (PostgreSQL + async + pgvector)
-sqlalchemy[asyncio]>=2.0.35
-asyncpg>=0.30.0
-pgvector>=0.3.0
-alembic>=1.13.3
-psycopg2-binary>=2.9.9
+# ────────────────────────────────────────────────
+sqlalchemy[asyncio]==2.0.35
+asyncpg==0.30.0
+pgvector==0.3.0
+alembic==1.13.3
+psycopg2-binary==2.9.9
 
+# ────────────────────────────────────────────────
 # Auth, Security & Crypto
-argon2-cffi>=23.1.0
-pyjwt>=2.9.0
-pyotp>=2.9.0
-cryptography>=43.0.0
-passlib[bcrypt]>=1.7.4
+# ────────────────────────────────────────────────
+argon2-cffi==23.1.0
+pyjwt==2.9.0
+pyotp==2.9.0
+cryptography==43.0.0
+passlib[bcrypt]==1.7.4
 
+# ────────────────────────────────────────────────
 # AI / Agents / LangChain / xAI / LangGraph
-langchain-core>=0.2.38
-langchain-xai>=0.1.2
-langgraph>=0.2.14
-langgraph-checkpoint-redis>=0.3.0
-tenacity>=8.5.0
+# ────────────────────────────────────────────────
+langchain-core==0.2.38
+langchain-xai==0.1.2
+langgraph==0.2.14
+langgraph-checkpoint-redis==0.3.0
+tenacity==8.5.0
 
+# ────────────────────────────────────────────────
 # Billing & Stripe
-stripe>=11.4.0
+# ────────────────────────────────────────────────
+stripe==11.4.0
 
+# ────────────────────────────────────────────────
 # Email (Resend)
-resend>=2.0.0
+# ────────────────────────────────────────────────
+resend==2.0.0
 
+# ────────────────────────────────────────────────
 # Tasks, Queue & Redis
-celery[redis]>=5.4.0
-redis>=5.0.8
+# ────────────────────────────────────────────────
+celery[redis]==5.4.0
+redis==5.0.8
 
+# ────────────────────────────────────────────────
 # Rate Limiting & Middleware
-slowapi>=0.1.9
+# ────────────────────────────────────────────────
+slowapi==0.1.9
 
-# Observability & Monitoring
-prometheus-client>=0.20.0
-structlog>=24.4.0
+# ────────────────────────────────────────────────
+# Observability & Structured Logging
+# ────────────────────────────────────────────────
+prometheus-client==0.20.0
+structlog==24.4.0
 
+# ────────────────────────────────────────────────
 # Utilities
-pydantic-settings>=2.5.2
-pydantic[email]>=2.9.2
-httpx>=0.27.2
-qrcode[pil]>=8.0.0
-pillow>=10.4.0
-aiohttp>=3.10.5
+# ────────────────────────────────────────────────
+pydantic-settings==2.5.2
+pydantic[email]==2.9.2
+httpx==0.27.2
+qrcode[pil]==8.0.0
+pillow==10.4.0
+aiohttp==3.10.5
