--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -1,71 +1,50 @@
 # apps/api/requirements.txt
 
-# ────────────────────────────────────────────────
 # Core FastAPI & Server
-# ────────────────────────────────────────────────
 fastapi==0.115.2
 uvicorn[standard]==0.30.6
 starlette==0.40.0
 python-multipart==0.0.9
 orjson==3.10.7
 
-# ────────────────────────────────────────────────
-# Database & ORM (PostgreSQL + async + pgvector)
-# ────────────────────────────────────────────────
+# Database & ORM
 sqlalchemy[asyncio]==2.0.35
 asyncpg==0.30.0
 pgvector==0.3.0
 alembic==1.13.3
 psycopg2-binary==2.9.9
 
-# ────────────────────────────────────────────────
-# Auth, Security & Crypto
-# ────────────────────────────────────────────────
+# Auth & Security
 argon2-cffi==23.1.0
 pyjwt==2.9.0
 pyotp==2.9.0
 cryptography==43.0.0
 passlib[bcrypt]==1.7.4
 
-# ────────────────────────────────────────────────
-# AI / Agents / LangChain / xAI / LangGraph
-# ────────────────────────────────────────────────
+# AI / LangGraph (no langchain-xai)
 langchain-core==0.2.38
-langchain-xai==0.1.2
 langgraph==0.2.14
 langgraph-checkpoint-redis==0.3.0
 tenacity==8.5.0
 
-# ────────────────────────────────────────────────
-# Billing & Stripe
-# ────────────────────────────────────────────────
+# Billing
 stripe==11.4.0
 
-# ────────────────────────────────────────────────
-# Email (Resend)
-# ────────────────────────────────────────────────
+# Email
 resend==2.0.0
 
-# ────────────────────────────────────────────────
-# Tasks, Queue & Redis
-# ────────────────────────────────────────────────
+# Tasks & Redis
 celery[redis]==5.4.0
 redis==5.0.8
 
-# ────────────────────────────────────────────────
-# Rate Limiting & Middleware
-# ────────────────────────────────────────────────
+# Rate Limiting
 slowapi==0.1.9
 
-# ────────────────────────────────────────────────
-# Observability & Structured Logging
-# ────────────────────────────────────────────────
+# Monitoring
 prometheus-client==0.20.0
 structlog==24.4.0
 
-# ────────────────────────────────────────────────
 # Utilities
-# ────────────────────────────────────────────────
 pydantic-settings==2.5.2
 pydantic[email]==2.9.2
 httpx==0.27.2
