--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -1,50 +1,44 @@
 # apps/api/requirements.txt
+# Last fixed: 2026-02-10 – compatible versions, no conflicts
 
-# Core FastAPI & Server
 fastapi==0.115.2
 uvicorn[standard]==0.30.6
 starlette==0.40.0
 python-multipart==0.0.9
 orjson==3.10.7
 
-# Database & ORM
 sqlalchemy[asyncio]==2.0.35
 asyncpg==0.30.0
 pgvector==0.3.0
 alembic==1.13.3
 psycopg2-binary==2.9.9
 
-# Auth & Security
 argon2-cffi==23.1.0
 pyjwt==2.9.0
 pyotp==2.9.0
 cryptography==43.0.0
 passlib[bcrypt]==1.7.4
 
-# AI / LangGraph (no langchain-xai)
+# ────────────────────────────────────────────────
+# AI stack – carefully chosen compatible versions
+# ────────────────────────────────────────────────
 langchain-core==0.2.38
 langgraph==0.2.14
-langgraph-checkpoint-redis==0.3.0
+langgraph-checkpoint==1.0.12          # required by langgraph 0.2.14
+langgraph-checkpoint-redis==0.1.0     # compatible with checkpoint 1.x
 tenacity==8.5.0
 
-# Billing
 stripe==11.4.0
-
-# Email
 resend==2.0.0
 
-# Tasks & Redis
 celery[redis]==5.4.0
 redis==5.0.8
 
-# Rate Limiting
 slowapi==0.1.9
 
-# Monitoring
 prometheus-client==0.20.0
 structlog==24.4.0
 
-# Utilities
 pydantic-settings==2.5.2
 pydantic[email]==2.9.2
 httpx==0.27.2
