--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -1,5 +1,5 @@
 # apps/api/requirements.txt
-# Final – 2026-02-10 – no conflicts, no missing packages, minimal & pinned
+# Final – 2026-02-10 – compatible versions, no conflicts
 
 fastapi==0.115.2
 uvicorn[standard]==0.30.6
@@ -19,9 +19,9 @@ pyotp==2.9.0
 cryptography==43.0.0
 passlib[bcrypt]==1.7.4
 
-# AI / LangGraph – only what is actually used
-langchain-core==0.2.38
-langchain-groq==0.1.0  # or latest version
+# AI / LangGraph / Grok – compatible versions (fixed conflict)
+langchain-core==0.1.52
+langchain-groq==0.1.0
 langgraph==0.2.14
 tenacity==8.5.0
 
@@ -42,4 +42,3 @@ httpx==0.27.2
 qrcode[pil]==8.0.0
 pillow==10.4.0
 aiohttp==3.10.5
-
