--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,25 +1,29 @@
 {
   "name": "@cursorcode/web",
+  "version": "1.0.0",
+  "private": true,
   "dependencies": {
-    "next": "^14.1.0",
-    "react": "^18.2.0",
-    "next-auth": "^5.0.0-beta.4",
-    "react-hook-form": "^7.50.0",
-    "zod": "^3.22.4",
-    "@hookform/resolvers": "^3.3.4",
-    "axios": "^1.6.5",
-    "lucide-react": "^0.394.0",
-    "tailwindcss": "^3.4.1",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.1",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-slot": "^1.0.2"
+    "next": "14.1.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "next-auth": "5.0.0-beta.4",
+    "react-hook-form": "7.50.0",
+    "zod": "3.22.4",
+    "@hookform/resolvers": "3.3.4",
+    "axios": "1.6.5",
+    "lucide-react": "0.394.0",
+    "tailwindcss": "3.4.1",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.0",
+    "tailwind-merge": "2.2.1",
+    "@radix-ui/react-label": "2.0.2",
+    "@radix-ui/react-slot": "1.0.2"
   },
   "devDependencies": {
-    "@types/react": "^18.2.48",
-    "@types/node": "^20.10.6",
-    "typescript": "^5.3.3"
+    "@types/react": "18.3.3",
+    "@types/node": "20.10.6",
+    "@types/react-dom": "18.3.0",
+    "typescript": "5.3.3"
   },
   "scripts": {
     "dev": "next dev",
