--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,18 +1,27 @@
 {
   "name": "@cursorcode/web",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20.0.0"
+  },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "test": "jest"
+  },
   "dependencies": {
-    "next": "14.1.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "next": "16.1.6",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "next-auth": "5.0.0-beta.4",
     "react-hook-form": "7.50.0",
     "zod": "3.22.4",
     "@hookform/resolvers": "3.3.4",
     "axios": "1.6.5",
     "lucide-react": "0.394.0",
-    "tailwindcss": "3.4.1",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
     "tailwind-merge": "2.2.1",
@@ -20,15 +29,12 @@
     "@radix-ui/react-slot": "1.0.2"
   },
   "devDependencies": {
-    "@types/react": "18.3.3",
-    "@types/node": "20.10.6",
-    "@types/react-dom": "18.3.0",
-    "typescript": "5.3.3"
-  },
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "test": "jest"
+    "@types/react": "19.0.0",
+    "@types/node": "22.13.0",
+    "@types/react-dom": "19.0.0",
+    "typescript": "5.7.3",
+    "tailwindcss": "3.4.17",
+    "postcss": "8.5.1",
+    "autoprefixer": "10.4.20"
   }
 }
