--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cursorcode/web",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "private": true,
   "engines": {
     "node": ">=20.0.0"
@@ -16,25 +16,38 @@
     "next": "16.1.6",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    
     "next-auth": "5.0.0-beta.4",
-    "react-hook-form": "7.50.0",
-    "zod": "3.22.4",
-    "@hookform/resolvers": "3.3.4",
-    "axios": "1.6.5",
-    "lucide-react": "0.394.0",
-    "class-variance-authority": "0.7.0",
-    "clsx": "2.1.0",
-    "tailwind-merge": "2.2.1",
-    "@radix-ui/react-label": "2.0.2",
-    "@radix-ui/react-slot": "1.0.2"
+    "next-themes": "0.4.6",
+    
+    "react-hook-form": "7.54.2",
+    "@hookform/resolvers": "3.9.1",
+    "zod": "3.24.1",
+    
+    "axios": "1.7.9",
+    "lucide-react": "0.473.0",
+    
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "tailwind-merge": "2.6.0",
+    
+    "@radix-ui/react-label": "2.1.2",
+    "@radix-ui/react-slot": "1.1.2",
+    
+    "sonner": "1.7.4",
+    "recharts": "2.15.1",
+    "date-fns": "4.1.0",
+    "usehooks-ts": "3.1.1",
+    "@tanstack/react-query": "5.66.0"
   },
   "devDependencies": {
-    "@types/react": "19.0.0",
-    "@types/node": "22.13.0",
-    "@types/react-dom": "19.0.0",
+    "@types/react": "19.0.8",
+    "@types/node": "22.13.5",
+    "@types/react-dom": "19.0.3",
     "typescript": "5.7.3",
+    
     "tailwindcss": "3.4.17",
-    "postcss": "8.5.1",
+    "postcss": "8.5.3",
     "autoprefixer": "10.4.20"
   }
 }
