--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cursorcode/web",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "private": true,
   "engines": {
     "node": ">=20.0.0"
@@ -9,15 +9,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "jest"
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "16.1.6",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
+    "next": "16.0.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "next-auth": "5.0.0-beta.4",
-    "next-themes": "0.4.6",
+    "next-themes": "0.4.4",
     "react-hook-form": "7.54.2",
     "@hookform/resolvers": "3.9.1",
     "zod": "3.24.1",
@@ -29,22 +28,18 @@
     "@radix-ui/react-label": "2.1.2",
     "@radix-ui/react-slot": "1.1.2",
     "sonner": "1.7.4",
-    "recharts": "2.15.1",
+    "recharts": "2.15.0",
     "date-fns": "4.1.0",
     "usehooks-ts": "3.1.1",
     "@tanstack/react-query": "5.66.0"
   },
   "devDependencies": {
-    "@types/react": "19.0.8",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
     "@types/node": "22.13.5",
-    "@types/react-dom": "19.0.3",
     "typescript": "5.7.3",
     "tailwindcss": "3.4.17",
     "postcss": "8.5.3",
     "autoprefixer": "10.4.20"
-  },
-  "overrides": {
-    "react": "19.2.1",
-    "react-dom": "19.2.1"
   }
 }
