--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,45 +1,27 @@
 {
   "name": "@cursorcode/web",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "private": true,
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=20"
   },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
     "next": "16.0.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "next-auth": "5.0.0-beta.4",
-    "next-themes": "0.4.4",
-    "react-hook-form": "7.54.2",
-    "@hookform/resolvers": "3.9.1",
-    "zod": "3.24.1",
-    "axios": "1.7.9",
-    "lucide-react": "0.473.0",
-    "class-variance-authority": "0.7.1",
-    "clsx": "2.1.1",
-    "tailwind-merge": "2.6.0",
     "@radix-ui/react-label": "2.1.2",
-    "@radix-ui/react-slot": "1.1.2",
-    "sonner": "1.7.4",
-    "recharts": "2.15.0",
-    "date-fns": "4.1.0",
-    "usehooks-ts": "3.1.1",
-    "@tanstack/react-query": "5.66.0"
+    "@radix-ui/react-slot": "1.1.2"
   },
   "devDependencies": {
-    "@types/react": "19.0.0",
-    "@types/react-dom": "19.0.0",
-    "@types/node": "22.13.5",
     "typescript": "5.7.3",
-    "tailwindcss": "3.4.17",
-    "postcss": "8.5.3",
-    "autoprefixer": "10.4.20"
+    "@types/node": "22.13.5",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0"
   }
 }
