--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cursorcode/web",
-  "version": "1.3.2",
+  "version": "1.3.4",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -11,8 +11,6 @@
     "next": "14.2.35",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "next-auth": "5.0.0-beta.4",
-    "@radix-ui/react-label": "2.1.2",
-    "@radix-ui/react-slot": "1.1.2"
+    "next-auth": "5.0.0-beta.4"
   }
 }
