--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,72 +1,61 @@
 # docker-compose.yml
-# Local development stack for CursorCode AI (Supabase + Upstash – both external)
-# Only runs the backend API and frontend.
-# Redis and Postgres are now cloud services (Supabase + Upstash)
+# Local development stack for CursorCode AI
+# Uses external Supabase + Upstash (no local DB/Redis needed)
 
 version: "3.9"
 
 services:
-  # ────────────────────────────────────────────────
-  # Backend API (FastAPI)
-  # ────────────────────────────────────────────────
+  # ====================== BACKEND API ======================
   api:
     build:
-      context: .
-      dockerfile: apps/api/Dockerfile
+      context: ./apps/api
+      dockerfile: Dockerfile
     container_name: cursorcode-api
     restart: unless-stopped
     ports:
       - "8000:8000"
     env_file:
-      - apps/api/.env
+      - ./apps/api/.env
     environment:
       - ENVIRONMENT=development
       - LOG_LEVEL=DEBUG
     volumes:
-      - .:/app
+      - ./apps/api:/app
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 10s
       timeout: 5s
       retries: 5
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "5"
 
-  # ────────────────────────────────────────────────
-  # Frontend (Next.js)
-  # ────────────────────────────────────────────────
+  # ====================== FRONTEND (Next.js) ======================
   web:
     build:
-      context: .
-      dockerfile: apps/web/Dockerfile
+      context: ./apps/web
+      dockerfile: Dockerfile
     container_name: cursorcode-web
     restart: unless-stopped
     ports:
       - "3000:3000"
     depends_on:
-      - api
+      api:
+        condition: service_healthy
     env_file:
-      - apps/web/.env.local
+      - ./apps/web/.env.local
     environment:
       - NEXT_PUBLIC_API_URL=http://api:8000
       - NODE_ENV=development
     volumes:
       - ./apps/web:/app
       - /app/node_modules
-    command: pnpm dev
+    command: npm run dev
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000"]
+      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
       interval: 10s
       timeout: 5s
       retries: 5
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "5"
 
-# No volumes needed anymore (Supabase + Upstash are external)
+# Optional: Networks (useful if you add more services later)
+networks:
+  default:
+    name: cursorcode-network
