--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,40 +3,52 @@
   "version": "1.4.0",
   "private": true,
   "engines": {
-    "node": ">=20"
+    "node": ">=20.0.0"
   },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.35",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "next": "16.1.6",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
+
     "next-auth": "5.0.0-beta.4",
     "next-themes": "0.4.6",
+
     "react-hook-form": "7.54.2",
     "@hookform/resolvers": "3.9.1",
     "zod": "3.24.1",
+
     "axios": "1.7.9",
     "lucide-react": "0.473.0",
+
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "tailwind-merge": "2.6.0",
+
     "@radix-ui/react-label": "2.1.2",
     "@radix-ui/react-slot": "1.1.2",
+
     "sonner": "1.7.4",
     "recharts": "2.15.1",
     "date-fns": "4.1.0",
     "usehooks-ts": "3.1.1",
-    "@tanstack/react-query": "5.66.0"
+    "@tanstack/react-query": "5.66.0",
+
+    // Shared workspace packages (critical for monorepo)
+    "@cursorcode/ui": "workspace:*",
+    "@cursorcode/db": "workspace:*",
+    "@cursorcode/types": "workspace:*"
   },
   "devDependencies": {
-    "typescript": "5.7.3",
+    "@types/react": "19.0.8",
     "@types/node": "22.13.5",
-    "@types/react": "18.3.1",
-    "@types/react-dom": "18.3.1",
+    "@types/react-dom": "19.0.3",
+    "typescript": "5.7.3",
     "tailwindcss": "3.4.17",
     "postcss": "8.5.3",
     "autoprefixer": "10.4.20"
