--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "@cursorcode/ui",
+  "name": "@cursorcode/db",
   "version": "1.0.0",
   "private": true,
-  "main": "index.ts",
-  "types": "index.ts"
+  "main": "./index.ts",
+  "types": "./index.ts",
+  "dependencies": {
+    "@prisma/client": "^5.17.0"
+  }
 }
