--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cursorcode/db",
+  "name": "@cursorcode/ui",
   "version": "1.0.0",
   "private": true,
   "main": "./index.ts",
@@ -8,3 +8,4 @@
     "@prisma/client": "^5.17.0"
   }
 }
+
