--- a/package.json
+++ b/package.json
@@ -2,23 +2,15 @@
   "name": "cursorcode-ai",
   "version": "1.0.0",
   "private": true,
-
-  "packageManager": "yarn@1.22.19",
-
   "workspaces": [
     "apps/*",
     "packages/*"
   ],
-
   "scripts": {
-    "dev": "turbo run dev --parallel",
+    "dev": "turbo run dev",
     "build": "turbo run build",
-    "start": "turbo run start",
-    "lint": "turbo run lint",
-    "test": "turbo run test",
-    "clean": "turbo run clean && rm -rf node_modules"
+    "test": "turbo run test"
   },
-
   "devDependencies": {
     "turbo": "^1.13.4"
   }
