--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,15 +2,19 @@
   "name": "@cursorcode/web",
   "version": "1.4.0",
   "private": true,
+
   "engines": {
     "node": ">=20.0.0"
   },
+
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typecheck": "tsc --noEmit"
   },
+
   "dependencies": {
     "next": "16.1.6",
     "react": "19.2.1",
@@ -39,15 +43,18 @@
     "usehooks-ts": "3.1.1",
     "@tanstack/react-query": "5.66.0",
 
-    "@cursorcode/ui": "workspace:*",
-    "@cursorcode/db": "workspace:*",
-    "@cursorcode/types": "workspace:*"
+    "@cursorcode/ui": "*",
+    "@cursorcode/db": "*",
+    "@cursorcode/types": "*"
   },
+
   "devDependencies": {
+    "typescript": "5.7.3",
+
     "@types/react": "19.0.8",
     "@types/node": "22.13.5",
     "@types/react-dom": "19.0.3",
-    "typescript": "5.7.3",
+
     "tailwindcss": "3.4.17",
     "postcss": "8.5.3",
     "autoprefixer": "10.4.20"
