--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cursorcode/web",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "private": true,
 
   "engines": {
@@ -8,55 +8,86 @@
   },
 
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+
+    "dev": "next dev --webpack",
+
+    "build": "next build --webpack",
+
     "start": "next start",
+
     "lint": "next lint",
+
     "typecheck": "tsc --noEmit"
+
   },
 
   "dependencies": {
+
     "next": "16.1.6",
+
     "react": "19.2.1",
+
     "react-dom": "19.2.1",
 
     "next-auth": "5.0.0-beta.4",
+
     "next-themes": "0.4.6",
 
     "react-hook-form": "7.54.2",
+
     "@hookform/resolvers": "3.9.1",
+
     "zod": "3.24.1",
 
     "axios": "1.7.9",
+
     "lucide-react": "0.473.0",
 
     "class-variance-authority": "0.7.1",
+
     "clsx": "2.1.1",
+
     "tailwind-merge": "2.6.0",
 
     "@radix-ui/react-label": "2.1.2",
+
     "@radix-ui/react-slot": "1.1.2",
 
     "sonner": "1.7.4",
+
     "recharts": "2.15.1",
+
     "date-fns": "4.1.0",
+
     "usehooks-ts": "3.1.1",
+
     "@tanstack/react-query": "5.66.0",
 
-    "@cursorcode/ui": "*",
-    "@cursorcode/db": "*",
-    "@cursorcode/types": "*"
+
+    "@cursorcode/ui": "1.0.0",
+
+    "@cursorcode/db": "1.0.0",
+
+    "@cursorcode/types": "1.0.0"
+
   },
 
   "devDependencies": {
+
     "typescript": "5.7.3",
 
     "@types/react": "19.0.8",
+
     "@types/node": "22.13.5",
+
     "@types/react-dom": "19.0.3",
 
     "tailwindcss": "3.4.17",
+
     "postcss": "8.5.3",
+
     "autoprefixer": "10.4.20"
+
   }
+
 }
