--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,11 +2,14 @@
   "name": "@cursorcode/ui",
   "version": "1.0.0",
   "private": true,
-  "main": "index.ts",
-  "types": "index.ts",
+  "main": "./index.ts",
+  "types": "./index.ts",
   "dependencies": {
-    "@radix-ui/react-checkbox": "1.1.3",
-    "@radix-ui/react-progress": "1.1.3",
-    "@radix-ui/react-tabs": "1.1.3"
+    "@radix-ui/react-alert-dialog": "^1.1.2",
+    "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-progress": "^1.1.3",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3"
   }
 }
