--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "scripts": {
     "dev": "turbo run dev",
     "build": "turbo run build",
-    "test": "turbo run test"
+    "test": "turbo run test",
+    "postinstall": "prisma generate"
   },
   "devDependencies": {
     "turbo": "^1.13.4",
-    "prisma": "^5.17.0"          // ← This is the key fix
+    "prisma": "^5.17.0"
   }
 }
