--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   },
   "devDependencies": {
     "turbo": "^1.13.4",
-    "prisma": "^5.17.0"
+    "prisma": "^7.4.1",
+    "typescript": "^5.6.3",
+    "@types/node": "^20.17.0",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0"
   }
 }
