--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,26 +1,18 @@
 {
   "name": "@cursorcode/db",
   "version": "1.0.0",
-  "private": true,
-  "main": "./index.ts",
-  "types": "./index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "generate": "prisma generate",
-    "migrate": "prisma migrate deploy",
-    "migrate:dev": "prisma migrate dev",
-    "db:push": "prisma db push",
-    "studio": "prisma studio",
-    "seed": "tsx seed.ts",
-    "postinstall": "prisma generate"
+    "build": "prisma generate --schema prisma/schema.prisma",
+    "dev": "ts-node-dev --respawn src/index.ts"
   },
   "dependencies": {
-    "@prisma/client": "^5.17.0"
+    "@prisma/client": "^5.0.0"
   },
   "devDependencies": {
-    "prisma": "^5.17.0",
-    "tsx": "^4.19.2"
-  },
-  "prisma": {
-    "schema": "./prisma/schema.prisma"
+    "prisma": "^5.0.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.1.0"
   }
 }
