--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,18 +1,20 @@
 {
   "name": "@cursorcode/db",
   "version": "1.0.0",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "private": true,
+  "main": "./index.ts",
+  "types": "./index.ts",
   "scripts": {
-    "build": "prisma generate --schema prisma/schema.prisma",
-    "dev": "ts-node-dev --respawn src/index.ts"
+    "generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^5.0.0"
+    "@prisma/client": "^5.17.0"
   },
   "devDependencies": {
-    "prisma": "^5.0.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.1.0"
+    "prisma": "^5.17.0"
   }
 }
