--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cursorcode/web",
-  "version": "1.4.1",
+  "version": "1.4.2",
   "private": true,
 
   "engines": {
@@ -8,7 +8,7 @@
   },
 
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -16,23 +16,37 @@
   },
 
   "dependencies": {
+
     "next": "16.1.6",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "next-auth": "5.0.0-beta.4",
+
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+
+    "next-auth": "5.0.0-beta.20",
+
     "next-themes": "0.4.6",
+
     "react-hook-form": "7.54.2",
     "@hookform/resolvers": "3.9.1",
+
     "zod": "3.24.1",
+
     "axios": "1.7.9",
+
     "lucide-react": "0.473.0",
+
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "tailwind-merge": "2.6.0",
+
     "sonner": "1.7.4",
+
     "recharts": "2.15.1",
+
     "date-fns": "4.1.0",
+
     "usehooks-ts": "3.1.1",
+
     "@tanstack/react-query": "5.66.0",
 
     "@cursorcode/ui": "1.0.0",
@@ -41,12 +55,19 @@
   },
 
   "devDependencies": {
+
     "typescript": "^5.7.3",
+
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+
     "@types/node": "^22.13.5",
+
     "tailwindcss": "3.4.17",
+
     "postcss": "8.5.3",
+
     "autoprefixer": "10.4.20"
   }
+
 }
