--- a/package.json
+++ b/package.json
@@ -2,22 +2,28 @@
   "name": "cursorcode-ai",
   "version": "1.0.0",
   "private": true,
+
   "workspaces": [
     "apps/*",
     "packages/*"
   ],
+
   "scripts": {
     "dev": "turbo run dev",
     "build": "turbo run build",
+    "start": "turbo run start",
+    "lint": "turbo run lint",
+    "typecheck": "turbo run typecheck",
     "test": "turbo run test",
     "postinstall": "prisma generate"
   },
+
   "devDependencies": {
     "turbo": "^1.13.4",
-    "prisma": "^5.17.0",
-    "typescript": "^5.6.3",
-    "@types/node": "^20.17.0",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0"
+    "prisma": "^5.22.0",
+    "typescript": "^5.7.3",
+    "@types/node": "^22.13.5",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3"
   }
 }
