--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cursorcode/web",
-  "version": "1.4.3",
+  "version": "1.4.4",
   "private": true,
 
   "engines": {
@@ -56,12 +56,13 @@
 
   "devDependencies": {
 
-    "typescript": "^5.7.3",
+    "typescript": "5.7.3",
 
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/node": "22.13.5",
 
-    "@types/node": "^22.13.5",
+    "@types/react": "18.3.12",
+
+    "@types/react-dom": "18.3.1",
 
     "tailwindcss": "3.4.17",
 
