--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,52 +1,71 @@
-"dependencies": {
+{
+  "name": "@cursorcode/web",
+  "version": "1.4.3",
+  "private": true,
 
-  "next": "15.2.4",
+  "engines": {
+    "node": ">=20.0.0"
+  },
 
-  "react": "18.3.1",
-  "react-dom": "18.3.1",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "typecheck": "tsc --noEmit"
+  },
 
-  "next-auth": "5.0.0-beta.20",
+  "dependencies": {
 
-  "next-themes": "0.4.6",
+    "next": "15.2.4",
 
-  "react-hook-form": "7.54.2",
-  "@hookform/resolvers": "3.9.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
 
-  "zod": "3.24.1",
+    "next-auth": "5.0.0-beta.20",
 
-  "axios": "1.7.9",
+    "next-themes": "0.4.6",
 
-  "lucide-react": "0.473.0",
+    "react-hook-form": "7.54.2",
+    "@hookform/resolvers": "3.9.1",
 
-  "class-variance-authority": "0.7.1",
-  "clsx": "2.1.1",
-  "tailwind-merge": "2.6.0",
+    "zod": "3.24.1",
 
-  "sonner": "1.7.4",
+    "axios": "1.7.9",
 
-  "recharts": "2.15.1",
+    "lucide-react": "0.473.0",
 
-  "date-fns": "3.6.0",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "tailwind-merge": "2.6.0",
 
-  "usehooks-ts": "3.1.1",
+    "sonner": "1.7.4",
 
-  "@tanstack/react-query": "5.66.0",
+    "recharts": "2.15.1",
 
-  "@cursorcode/ui": "1.0.0",
-  "@cursorcode/db": "1.0.0",
-  "@cursorcode/types": "1.0.0",
+    "date-fns": "3.6.0",
 
-  "typescript": "5.7.3",
-  "@types/node": "22.13.5",
-  "@types/react": "18.3.12",
-  "@types/react-dom": "18.3.1"
-},
+    "usehooks-ts": "3.1.1",
 
-"devDependencies": {
+    "@tanstack/react-query": "5.66.0",
 
-  "tailwindcss": "3.4.17",
+    "@cursorcode/ui": "1.0.0",
+    "@cursorcode/db": "1.0.0",
+    "@cursorcode/types": "1.0.0",
 
-  "postcss": "8.5.3",
+    "typescript": "5.7.3",
+    "@types/node": "22.13.5",
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.1"
+  },
 
-  "autoprefixer": "10.4.20"
+  "devDependencies": {
+
+    "tailwindcss": "3.4.17",
+
+    "postcss": "8.5.3",
+
+    "autoprefixer": "10.4.20"
+  }
+
 }
