--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,15 +1,19 @@
 {
   "name": "@cursorcode/ui",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "main": "./index.ts",
   "types": "./index.ts",
+  "peerDependencies": {
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0"
+  },
   "dependencies": {
-    "@radix-ui/react-alert-dialog": "^1.1.2",
-    "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-progress": "^1.1.3",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-tabs": "^1.1.3"
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13"
   }
 }
