--- a/package.json
+++ b/package.json
@@ -20,12 +20,19 @@
     "clean": "turbo run clean && rm -rf node_modules .turbo apps/web/.next"
   },
 
+  "resolutions": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
+  },
+
   "devDependencies": {
     "turbo": "^1.13.4",
     "prisma": "^5.22.0",
     "typescript": "^5.7.3",
     "@types/node": "^22.13.5",
     "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3"
+    "@types/react-dom": "^19.0.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   }
 }
