--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,8 +18,8 @@
   "dependencies": {
     "next": "15.5.12",
 
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
 
     "next-auth": "5.0.0-beta.20",
 
@@ -52,12 +52,7 @@
     "@cursorcode/db": "1.0.1",
     "@cursorcode/types": "1.0.1",
 
-    "@simplewebauthn/browser": "^13.1.0",
-
-    "typescript": "5.7.3",
-    "@types/node": "22.13.5",
-    "@types/react": "18.3.12",
-    "@types/react-dom": "18.3.1"
+    "@simplewebauthn/browser": "^13.1.0"
   },
 
   "devDependencies": {
@@ -65,6 +60,11 @@
 
     "postcss": "8.5.3",
 
-    "autoprefixer": "10.4.20"
+    "autoprefixer": "10.4.20",
+
+    "typescript": "5.7.3",
+    "@types/node": "22.13.5",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3"
   }
 }
