--- a/package.json
+++ b/package.json
@@ -1,38 +1,47 @@
 {
-  "name": "cursorcode-ai",
-  "version": "1.0.0",
-  "private": true,
-  "packageManager": "yarn@1.22.19",
+"name": "cursorcode-ai",
+"version": "1.0.0",
+"private": true,
+"packageManager": "yarn@1.22.19",
 
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
 
-  "scripts": {
-    "dev": "turbo run dev",
-    "build": "turbo run build",
-    "start": "turbo run start",
-    "lint": "turbo run lint",
-    "typecheck": "turbo run typecheck",
-    "test": "turbo run test",
-    "postinstall": "prisma generate",
-    "clean": "turbo run clean && rm -rf node_modules .turbo apps/web/.next"
-  },
+"workspaces": [
+"apps/",
+"packages/"
+],
 
-  "resolutions": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
 
-  "devDependencies": {
-    "turbo": "^1.13.4",
-    "prisma": "^5.22.0",
-    "typescript": "^5.7.3",
-    "@types/node": "^22.13.5",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  }
+"prisma": {
+"schema": "packages/db/prisma/schema.prisma"
+},
+
+
+"scripts": {
+"dev": "turbo run dev",
+"build": "turbo run build",
+"start": "turbo run start",
+"lint": "turbo run lint",
+"typecheck": "turbo run typecheck",
+"test": "turbo run test",
+"postinstall": "prisma generate",
+"clean": "turbo run clean && rm -rf node_modules .turbo apps/web/.next"
+},
+
+
+"resolutions": {
+"react": "^19.0.0",
+"react-dom": "^19.0.0"
+},
+
+
+"devDependencies": {
+"turbo": "^1.13.4",
+"prisma": "^5.22.0",
+"typescript": "^5.7.3",
+"@types/node": "^22.13.5",
+"@types/react": "^19.0.8",
+"@types/react-dom": "^19.0.3",
+"react": "^19.0.0",
+"react-dom": "^19.0.0"
+}
 }
