--- a/package.json
+++ b/package.json
@@ -17,14 +17,23 @@
 
 
 "scripts": {
-"dev": "turbo run dev",
+"dev": "turbo run dev --parallel",
 "build": "turbo run build",
 "start": "turbo run start",
 "lint": "turbo run lint",
 "typecheck": "turbo run typecheck",
 "test": "turbo run test",
-"postinstall": "prisma generate",
-"clean": "turbo run clean && rm -rf node_modules .turbo apps/web/.next"
+
+
+"db:generate": "prisma generate",
+"db:migrate": "prisma migrate dev",
+
+"postinstall": "yarn db:generate",
+
+"clean": "turbo run clean && rm -rf node_modules .turbo"
+
+
+
 },
 
 
@@ -35,7 +44,7 @@
 
 
 "devDependencies": {
-"turbo": "^1.13.4",
+"turbo": "^2.0.0",
 "prisma": "^5.22.0",
 "typescript": "^5.7.3",
 "@types/node": "^22.13.5",
@@ -45,3 +54,4 @@
 "react-dom": "^19.0.0"
 }
 }
+
