--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cursorcode/web",
+  "name": "cursorcode-ai",
   "version": "1.0.0",
   "private": true,
   "packageManager": "yarn@1.22.19",
@@ -24,7 +24,11 @@
   },
   "resolutions": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "typescript": "5.7.3",
+    "@types/node": "22.13.5",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
