--- a/package.json
+++ b/package.json
@@ -3,16 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "packageManager": "yarn@1.22.19",
-
   "workspaces": [
     "apps/*",
     "packages/*"
   ],
-
   "prisma": {
     "schema": "packages/db/prisma/schema.prisma"
   },
-
   "scripts": {
     "dev": "turbo run dev --parallel",
     "build": "turbo run build",
@@ -20,12 +17,11 @@
     "lint": "turbo run lint",
     "typecheck": "turbo run typecheck",
     "test": "turbo run test",
-    "db:generate": "prisma generate",
-    "db:migrate": "prisma migrate dev",
-    "postinstall": "prisma generate",
+    "db:generate": "yarn workspace @cursorcode/db prisma:generate",
+    "db:migrate": "yarn workspace @cursorcode/db prisma:migrate",
+    "postinstall": "yarn db:generate",
     "clean": "turbo run clean && rm -rf node_modules .turbo"
   },
-
   "resolutions": {
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -34,7 +30,6 @@
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3"
   },
-
   "devDependencies": {
     "@types/node": "22.13.5",
     "@types/react": "19.0.8",
